Методы API закончил